--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/paper"]
-	path = themes/paper
-	url = https://github.com/nanxiaobei/hugo-paper
+[submodule "themes/lasagna"]
+	path = themes/lasagna
+	url = https://github.com/cyevgeniy/monday-theme
